# gh-actions-demo-results

./: README.md
.github/scripts/release/: 0-get-latest-tag.sh  1-determine-bump-type.sh  2-bump-version.sh  3-generate-release-notes.sh  4-create-tag.sh  README.md  test-bump-type.sh
.github/workflows/: main.yml  pull-request.yml
dbt/: .gitignore  Makefile  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
dbt/macros/: apply_tags.sql  grant_table_access.sql
dbt/models/example/: schema.yml  test_masking.sql  test_masking_impact.sql
terraform/: .gitignore  .terraform.lock.hcl  README.md  backend.tf  main.tf  providers-extra.tf  providers.tf  terragrunt.hcl
terraform/modules/create-access-roles/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/create-access-roles/privileges/admin/: database.lst  schema.lst  table.lst
terraform/modules/create-access-roles/privileges/readonly/: database.lst
terraform/modules/create-access-roles/privileges/readwrite/: schema.lst  table.lst
